--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@supabase/supabase-js": "^1.8.0",
     "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-vercel": "^1.0.0-next.31",
     "@sveltejs/kit": "next",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.44.0",
-    "@supabase/supabase-js": "^1.8.0"
+    "svelte": "^3.44.0"
   },
   "type": "module"
 }
